# anime-season-for-sonarr

./: .gitignore  Docker FIle  Dockerfile  README.md  anime_season_for_sonarr.py  config.ini  config.toml.example  docker-compose.yml  pyproject.toml  requirements.txt  script.py
tests/: test.py
