[project]
name = "anime-season-for-sonarr"
version = "0.2.0"
description = "Bulk add anime to Sonarr from a given anime season."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrapi>=1.4.14",
    "httpx>=0.28.1",
    "questionary>=2.1.1",
    "setuptools<81",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
cache-dir = ".ruff_cache"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "ANN",
  "ASYNC",
  "S",
  "A",
  "B",
  "C4",
  "COM",
  "E",
  "W",
  "EXE",
  "F",
  "FLY",
  "G",
  "I",
  "ICN",
  "ISC",
  "LOG",
  "PERF",
  "PIE",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "SIM",
  "T10",
  "TRY",
  "UP",
  "ARG",
  "PL",
  ]

ignore = [
    "E501",
    "COM812",
    "TRY002",
    "TRY003",
    "PTH123",
    "PLR2004",
    "PT009",
]
